--- a/templates/vehicle-sheet.html
+++ b/templates/vehicle-sheet.html
@@ -175,7 +175,9 @@
                                         </div>
                                     </td>
                                     <td class="table-center-align">{{item.data.qty}}</td>
-                                    <td class="table-center-align">{{item.data.armor_value}}</td>
+                                    <td class="table-center-align armor-button-cell">
+                                        <button type="button">{{item.data.armor_value}}</button>
+                                    </td>
                                     <td class="table-center-align">{{item.data.encumbrance}}</td>
                                     <td class="table-center-align"><a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a></td>
                                 </tr>
