--- a/styles/main.css
+++ b/styles/main.css
@@ -266,7 +266,7 @@
      height: 153px;
      width: 145px;
      transform: rotate(-3deg);
-     z-index: +1;
+     z-index: 1;
  }
  
  .afmbe #sheet-logo {
@@ -306,12 +306,13 @@
      position: absolute;
      bottom: 0;
      left: 0;
+     z-index: 3;
  }
 
  .afmbe .profile-tags-container .tags-flex-container {
      display: flex;
      flex-direction: column;
-     align-items: center;
+     align-items: flex-start;
      justify-content: flex-start;
  }
 
