--- a/templates/weapon-sheet.html
+++ b/templates/weapon-sheet.html
@@ -10,31 +10,58 @@
 
     <section>
         <div class="description-container">
-            <div class="item-resource-container">
+            <div class="item-attribute-sidebar">
+                <h2>Attributes</h2>
                 <table>
-                    <thead>
-                        <tr>
-                            <th>Range</th>
-                            <th>Damage</th>
-                            <th colspan="2">Capacity</th>
-                            <th>EV</th>
-                            <th>Cost</th>
-                        </tr>
-                    </thead>
                     <tbody>
                         <tr>
+                            <th>Range</th>
                             <td><input type="text" name="data.range" value="{{data.range}}"></td>
+                        </tr>
+                        <tr>
+                            <th>Damage</th>
                             <td><input type="text" name="data.damage" value="{{data.damage}}"></td>
-                            <td><input type="number" name="data.capacity.value" value="{{data.capacity.value}}"></td>
-                            <td><input type="number" name="data.capacity.max" value="{{data.capacity.max}}"></td>
+                        </tr>
+                        <tr>
+                            <th>Damage Type</th>
+                            <td>
+                                <select id="damageTypeSelect" name="data.damage_type" data-type="String">
+                                    {{#select item.data.data.damage_type}}
+                                        {{#each item.data.data.damage_types as |damage_types key|}}
+                                            <option value="{{key}}">{{damage_types}}</option>
+                                        {{/each}}
+                                    {{/select}}
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>Ammo Type</th>
+                            <td><input type="text" name="data.ammo_type" value="{{data.ammo_type}}"></td>
+                        </tr>
+                        <tr>
+                            <th>Capacity</th>
+                            <td>
+                                <div class="item-name-flex-container">
+                                    <input type="number" name="data.capacity.value" value="{{data.capacity.value}}">
+                                    <input type="number" name="data.capacity.max" value="{{data.capacity.max}}">
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>EV</th>
                             <td><input type="number" name="data.encumbrance" value="{{data.encumbrance}}"></td>
+                        </tr>
+                        <tr>
+                            <th>Cost</th>
                             <td><input type="number" name="data.cost" value="{{data.cost}}"></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
-            <h2 class="item-desc">Description</h2>
-            {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+            <div class="item-description-sidebar">
+                <h2 class="item-desc">Description</h2>
+                {{editor content=data.description target="data.description" button=true owner=owner editable=editable}}
+            </div>
         </div>
     </section>
 </form>
