--- a/templates/creature-sheet.html
+++ b/templates/creature-sheet.html
@@ -70,7 +70,7 @@
                             <h2>Secondary Attributes</h2>
                             <div class="resource-container">
                                 <div class="resource">
-                                    <div>Life Points</div>
+                                    <button class="reset-resource" data-resource="hp">Life Points</button>
                                     <div class="resource-values secondaryAttribute">
                                         <input type="number" name="data.hp.value" value="{{data.hp.value}}">
                                         / 
@@ -78,7 +78,7 @@
                                     </div>
                                 </div>
                                 <div class="resource">
-                                    <div>Endurance Points</div>
+                                    <button class="reset-resource" data-resource="endurance_points">Endurance</button>
                                     <div class="resource-values secondaryAttribute">
                                         <input type="number" name="data.endurance_points.value" value="{{data.endurance_points.value}}">
                                         / 
@@ -86,14 +86,14 @@
                                     </div>
                                 </div>
                                 <div class="resource">
-                                    <div>Speed</div>
+                                    <button>Speed</button>
                                     <div class="resource-values secondaryAttribute">
-                                        <div>{{data.speed.value}} mph</div>
-                                        <div>[{{data.speed.halfValue}} m/sec]</div>
+                                        <div>{{data.speed.value}}mph</div>
+                                        <div>[{{data.speed.halfValue}}m/sec]</div>
                                     </div>
                                 </div>
                                 <div class="resource">
-                                    <div>Essence Pool</div>
+                                    <button class="reset-resource" data-resource="essence">Essence Pool</button>
                                     <div class="resource-values secondaryAttribute">
                                         <input type="number" name="data.essence.value" value="{{data.essence.value}}">
                                         / 
