added limited-type sheets for Characters and Creatures

--- a/styles/main.css
+++ b/styles/main.css
@@ -539,3 +539,11 @@
      align-items: center;
      justify-content: center;
  }
+
+ /* ------------------------------------------- 
+        Limited Permission Sheets
+ ---------------------------------------------*/
+
+ .afmbe .blur {
+     filter: blur(5px);
+ }
