Updated armor roll button to dynamically resize so it can fit larger roll formulas. Additionally, customized Creature sheet Attribute rolls to include Aspects and modified data structure and rolls Characters to include penalties from loss of Endurance Points and Essence.

--- a/styles/main.css
+++ b/styles/main.css
@@ -471,7 +471,7 @@
  }
 
  .afmbe .armor-button-cell button {
-     max-width: 60px;
+     max-width: 75%;
      height: 18px;
      line-height: 10px;
  }
