--- a/templates/aspect-sheet.html
+++ b/templates/aspect-sheet.html
@@ -34,6 +34,10 @@
                             <th>Essence+</th>
                             <td><input type="number" name="data.resource_bonus.essence" value="{{data.resource_bonus.essence}}"></td>
                         </tr>
+                        <tr>
+                            <th>Initiative+</th>
+                            <td><input type="number" name="data.resource_bonus.initiative" value="{{data.resource_bonus.initiative}}"></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
