--- a/templates/creature-sheet.html
+++ b/templates/creature-sheet.html
@@ -213,7 +213,7 @@
                                             <div class="item-name">{{item.name}}</div>
                                         </div>
                                     </td>
-                                    <td class="table-center-align">{{item.data.damage}}</td>
+                                    <td class="table-center-align">{{item.data.damage_string}}</td>
                                     <td>
                                         <div class="table-flex-cell">
                                             <div>{{item.data.capacity.value}}</div>
