--- a/styles/main.css
+++ b/styles/main.css
@@ -14,7 +14,7 @@
 
  .afmbe.sheet.actor .window-content,
  .afmbe.sheet.item .window-content {
-    background: rgb(100, 100, 100);
+    background: rgb(22, 22, 22);
     color: rgb(231, 231, 231);
 }
 
@@ -25,14 +25,9 @@
    color: black;
 }
 
-.afmbe.sheet.item .editable {
-    padding: 0 5px;
-    background: rgb(41, 50, 59);
-}
-
 .afmbe.sheet.actor button,
 .afmbe.sheet.item button {
-    color: white;
+    color: rgb(231, 231, 231);
     background:rgb(85, 85, 85);
     border: 1px solid black;
 }
@@ -41,31 +36,35 @@
 .afmbe.sheet.actor select,
 .afmbe.sheet.item input,
 .afmbe.sheet.item select {
-    color: white;
+    color: rgb(231, 231, 231);
+}
+
+.afmbe.sheet.item .window-content .editable {
+    background: rgb(45, 51, 56);
 }
 
 .afmbe option {
-    background: rgb(41, 50, 59);
+    background: rgb(22, 22, 22);
 }
 
 .app.window-app.dialog .window-content {
-    background: rgb(100, 100, 100);
+    background: rgb(22, 22, 22);
 }
 
 .app.window-app.dialog .dialog-content {
-    color: white;
+    color: rgb(231, 231, 231);
     padding: 0 5px;
     background: rgb(41, 50, 59);
 }
 
 .app.window-app.dialog .dialog-buttons button {
-    color: white;
+    color: rgb(231, 231, 231);
     background: rgb(85, 85, 85);
     border: 1px solid black;
 }
 
 .window-header {
-    background: black;
+    background: rgb(22, 22, 22);
 }
 
  .afmbe-dialog-menu {
@@ -73,7 +72,7 @@
      flex-direction: column;
      gap: 5px;
      background: rgb(41, 50, 59);
-     color: white;
+     color: rgb(231, 231, 231);
  }
 
  .afmbe h1,
@@ -197,6 +196,7 @@
 
  .afmbe .item-name:hover {
      font-weight: bold;
+     color: rgb(0, 0, 0);
  }
 
  .afmbe .item-name-flex-container {
@@ -237,6 +237,10 @@
     width: 15px;
 }
 
+.afmbe tbody tr:nth-child(even) {
+    background: rgba(46, 46, 46, 0.541);
+}
+
  /* ------------------------------------------- 
         Chat Message Defaults
  ---------------------------------------------*/
@@ -272,12 +276,12 @@
  }
 
  .afmbe .description-container .editor {
-    height: 100%;
     width: 100%;
  }
 
  .afmbe .editor-content {
      min-height: 200px;
+     max-height: 100%;
  }
 
  .afmbe .editor .tox-toolbar__group button {
@@ -300,7 +304,7 @@
      justify-content: stretch;
      flex-wrap: nowrap;
      height: 100%;
-     background: rgb(41, 50, 59);
+     background: rgb(45, 51, 56);
  }
 
  .afmbe .sheet-sidebar {
@@ -310,6 +314,7 @@
      height: 100%;
      border-right: 1px solid;
      padding: 0 5px;
+     background: rgb(63, 70, 77);
  }
 
  .afmbe .sheet-sidebar input {
@@ -369,16 +374,18 @@
      position: absolute;
      bottom: 0;
      right: 0;
-     background: rgba(82, 82, 82, 0.493);
+     background: rgba(41, 0, 0, 0.616);
      z-index: 5;
      font-family: "Jolly Roger";
      font-size: x-large;
+     border-radius: 3px;
  }
 
  .afmbe .sheet-nav {
      display: flex;
      flex-direction: column;
      align-items: center;
+     border: none !important;
  }
 
  .afmbe .sheet-nav a {
@@ -517,6 +524,7 @@
  .afmbe .skills-container,
  .afmbe .powers-container {
      width: 50%;
+     border-radius: 3px;
  }
 
  .afmbe .equipment-header {
@@ -538,7 +546,7 @@
  }
 
  .afmbe .encumbrance-resource div {
-     font-size: larger;
+     font-size: 20px;
  }
 
  .afmbe .weapon-table,
@@ -547,9 +555,8 @@
  .afmbe .drawbacks-container,
  .afmbe .skills-container,
  .afmbe .powers-container {
-     margin: 10px 0;
-     border-bottom: 1px solid;
-     /* background:rgba(82, 82, 82, 0.493); */
+     margin: 10px 0 0 0;
+     background: rgba(78, 78, 78, 0.603);
  }
 
  .afmbe .armor-button-cell button {
@@ -561,6 +568,12 @@
 /* ------------------------------------------- 
         Item Sheets
  ---------------------------------------------*/
+
+ .afmbe .item-sheet-container {
+    padding: 0 5px;
+    background: rgb(41, 50, 59);
+    height: 100%;
+ }
 
  .afmbe .item-sheet-header {
      display: flex;
@@ -604,15 +617,19 @@
  .afmbe .description-container {
      display: flex;
      flex-direction: row;
-     gap: 10px;
+     height: 100%;
  }
 
  .afmbe .item-description-sidebar {
      width: 100%;
+     padding: 0 5px;
+     border-left: 1px solid rgb(231, 231, 231);
  }
 
  .afmbe .item-attribute-sidebar {
-     width: 350px;
+     min-width: 40%;
+     height: 100%;
+     padding: 0 5px;
  }
 
  .afmbe .item-attribute-sidebar table select,
