--- a/templates/limited-creature-sheet.html
+++ b/templates/limited-creature-sheet.html
@@ -4,13 +4,10 @@
     <div class="sheet-flex-container">
         <div class="sheet-sidebar">
             <div class="header-container">
-                <img id="sheet-logo" src="systems/afmbe/images/AFMBElogo.gif">
+                <!-- <img id="sheet-logo" src="systems/afmbe/images/AFMBElogo.gif"> -->
                 <div class="polaroid-container">
                     <img class="polaroid" src="systems/afmbe/images/polaroid.png">
                     <img class="profile-img" data-edit="img" src="{{actor.img}}">
-
-
-
 
                     <div class="sheet-nav-container" hidden>
                         <nav class="sheet-nav sheet-tabs tabs" data-group="primary">
@@ -18,9 +15,6 @@
                             <a class="item" data-tab="equipment">Equipment</a>
                         </nav>
                     </div>
-
-
-
 
                     <div class="profile-tags-container">
                         <div class="tags-flex-container"></div>
