--- a/templates/vehicle-sheet.html
+++ b/templates/vehicle-sheet.html
@@ -4,7 +4,7 @@
     <div class="sheet-flex-container">
         <div class="sheet-sidebar">
             <div class="header-container">
-                <img id="sheet-logo" src="systems/afmbe/images/AFMBElogo.gif">
+                <!-- <img id="sheet-logo" src="systems/afmbe/images/AFMBElogo.gif"> -->
                 <div class="polaroid-container">
                     <img class="polaroid" src="systems/afmbe/images/polaroid.png">
                     <img class="profile-img" data-edit="img" src="{{actor.img}}">
