--- a/templates/creature-sheet.html
+++ b/templates/creature-sheet.html
@@ -4,9 +4,9 @@
     <div class="sheet-flex-container">
         <div class="sheet-sidebar">
             <div class="header-container">
-                <img id="sheet-logo" src="systems/afmbe/images/AFMBElogo.gif">
+                <!--  <img id="sheet-logo" src="systems/afmbe/images/AFMBElogo.gif"> -->
                 <div class="polaroid-container">
-                    <!-- <img class="polaroid" src="systems/afmbe/images/polaroid.png"> -->
+                    <img class="polaroid" src="systems/afmbe/images/polaroid.png">
                     <img class="profile-img" data-edit="img" src="{{actor.img}}">
                     <div class="sheet-nav-container">
                         <nav class="sheet-nav sheet-tabs tabs" data-group="primary">
